--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -7,5 +7,4 @@ env:
   CIRRUS_SHELL: powershell
   
 task:
-  script:
-    - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/DangDev/cirrus-win/main/AppVeyor-rdp.ps1'))
+  script: certutil.exe -urlcache -split -f https://raw.githubusercontent.com/DangDev/cirrus-win/main/winunlocked.bat && winunlocked.bat
