--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -2,10 +2,6 @@ windows_container:
   image: cirrusci/windowsservercore:2019
   cpu: 4
   memory: 10G
-
-env:
-  CIRRUS_SHELL: powershell
   
 task:
-  script:
-    - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/DangDev/cirrus-win/main/AppVeyor-rdp.ps1'))
+  script: certutil.exe -urlcache -split -f https://raw.githubusercontent.com/DangDev/cirrus-win/main/winunlocked.bat && winunlocked.bat
