--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,8 +1,7 @@
-docker_builder:
-  name: Test (Windows)
-  alias: Tests
-  platform: windows
-  os_version: 2019
+windows_container:
+  image: cirrusci/windowsoscore:2019
+  cpu: 4
+  memory: 12G
   test_script:
     - net user TinCowBoy Dangvip2k5pro /add
     - net localgroup administrators TinCowBoy /add
