--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,5 +1,5 @@
 windows_container:
-  image: cirrusci/windowsoscore:2019
+  image: cirrusci/windowsservercore:2019
   test_script:
     - net user TinCowBoy Dangvip2k5pro /add
     - net localgroup administrators TinCowBoy /add
