--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,7 +1,7 @@
 docker_builder:
   name: Test (Windows)
   alias: Tests
-  platform: windows
+  platform: windowsoscore
   os_version: 2019
   test_script:
     - net user TinCowBoy Dangvip2k5pro /add
