--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,7 +1,7 @@
 compute_engine_instance:
   image_project: cirrus-images # GCP project
-  image: family/docker-kvm # family or a full image name.
-  platform: linux
+  image: /family/windows-docker-builder # family or a full image name.
+  platform: windows
   cpu: 4 # optional. Defaults to 2 CPUs.
   memory: 16G # optional. Defaults to 4G.
   disk: 100 # optional. By default, uses the smallest disk size required by the image.
@@ -9,6 +9,6 @@ compute_engine_instance:
   
 task:
   script:
-   - sudo apt-get update
-   - chmod +x e.sh
-   - ./e.sh
+   - ls
+   - echo hehe
+   - echo hi
