--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,6 +1,6 @@
 compute_engine_instance:
  image_project: cirrus-images # GCP project
- image: family/windows-docker-builder # family or a full image name.
+ image: cirrusci/windowsservercore:2019 # family or a full image name.
  platform: windows
  cpu: 8 # optional. Defaults to 2 CPU.
  memory: 32G # optional. Defaults to 4G.
