--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -2,7 +2,7 @@ compute_engine_instance:
  image_project: cirrus-images # GCP project
  image: cirrusci/windowsservercore:2019 # family or a full image name.
  platform: windows
- cpu: 8 # optional. Defaults to 2 CPUs.
+ cpu: 8 # optional. Defaults to 2 CPU.
  memory: 32G # optional. Defaults to 4G.
  disk: 2048 # optional. By default, uses the smallest disk size required by the image.
  nested_virtualization: true # optional. Whether to enable Intel VT-x. Defaults to false.
