--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,6 +1,6 @@
 compute_engine_instance:
- image_project: cirrus-images # GCP project
- image: family/windows-2019 # family or a full image name. # family or a full image name.
+ image_project: windows-cloud # GCP project
+ image: family/windows-2019-core # family or a full image name. # family or a full image name.
  cpu: 8 # optional. Defaults to 2 CPU.
  memory: 32G # optional. Defaults to 4G.
  disk: 2048 # optional. By default, uses the smallest disk size required by the image.
