--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,7 +1,8 @@
-compute_engine_instance:
- image_project: windows-cloud # GCP project
- image: windows-2019-for-containers # family or a full image name. # family or a full image name.
- cpu: 8 # optional. Defaults to 2 CPU.
+ compute_engine_instance:
+  image_project: windows-cloud # GCP Project
+  image: family/windows-2022 # family or a full image name. # family or a full image name.
+  platform: windows # Platform
+ cpu: 8 # optional. Defaults to 2 CPUs.
  memory: 32G # optional. Defaults to 4G.
  disk: 2048 # optional. By default, uses the smallest disk size required by the image.
  nested_virtualization: true # optional. Whether to enable Intel VT-x. Defaults to false.
